education section complete

--- a/component-library/components/education-card/education-card.jekyll.html
+++ b/component-library/components/education-card/education-card.jekyll.html
@@ -5,7 +5,7 @@
     <div class="{{c}}__school-meta">
       {% if include.education-item.school_logo %}
         <div class="{{c}}__logo-container">
-          <img src="{{ include.education-item.school_logo }}" alt="{{ include.education-item.school_name }}" class="{{c}}__school-logo">
+          <img class="{{c}}__school-logo" src="{{ include.education-item.school_logo }}" alt="{{ include.education-item.school_name }}">
         </div>
       {% endif %}
 
